processed/jira/txt/LU/LU-19549.txt
Key:        LU-19549
Summary:    el10 build fix
Link:       https://jira.whamcloud.com/browse/LU-19549
Type:       Bug
Priority:   Medium
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Fri, 31 Oct 2025 02:06:26 +0000
Updated:    Fri, 14 Nov 2025 14:04:55 +0000
Resolved:   Fri, 14 Nov 2025 14:04:55 +0000

--- Description ---
("LU-18562 osd: llog write batch block allocation") landed some changes that break 6.12 (el10) kernel builds:

  CC [M]  /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_handler.o
/home/shaun/lustre-release/lustre/osd-ldiskfs/osd_handler.c:2436:6: error: no previous prototype for ‘osd_drop_preallocated_space’ [-Werror=missing-prototypes]
 2436 | void osd_drop_preallocated_space(struct osd_object *o)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[7]: *** [scripts/Makefile.build:229: /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_handler.o] Error 1
  CC [M]  /home/shaun/lustre-release/lustre/osd-ldiskfs/osd_io.o
/home/shaun/lustre-release/lustre/osd-ldiskfs/osd_io.c:1961:21: error: no previous prototype for ‘osd_getnblk’ [-Werror=missing-prototypes]
 1961 | struct buffer_head *osd_getnblk(handle_t *handle, struct osd_object *o,
      |                     ^~~~~~~~~~~
/home/shaun/lustre-release/lustre/osd-ldiskfs/osd_io.c:2101:5: error: no previous prototype for ‘osd_ldiskfs_write_fast’ [-Werror=missing-prototypes]
 2101 | int osd_ldiskfs_write_fast(struct osd_object *o,  void *buf,
      |     ^~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

--- Comment (pjo, Fri, 14 Nov 2025 14:04:55 +0000) ---
Merged for 2.17

--- Comment (gerrit, Fri, 14 Nov 2025 02:13:59 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/62136/

Subject: LU-19549 osd-ldiskfs: missing prototypes build fix

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: ac0271a68b3aae207626efcc6adade7d7f740bab

--- Comment (gerrit, Fri, 31 Oct 2025 02:11:49 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/62136

Subject: LU-19549 osd-ldiskfs: missing prototypes build fix

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: e57973a285ce87bc6b2231d074332863ac775452
